// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`gap all 1`] = `
{
  "children": [
    {
      "height": 50,
      "width": 50,
      "x": 0,
      "y": 0,
    },
    {
      "height": 50,
      "width": 50,
      "x": 0,
      "y": 60,
    },
    {
      "height": 50,
      "width": 50,
      "x": 0,
      "y": 120,
    },
    {
      "height": 50,
      "width": 50,
      "x": 60,
      "y": 0,
    },
    {
      "height": 50,
      "width": 50,
      "x": 60,
      "y": 60,
    },
    {
      "height": 50,
      "width": 50,
      "x": 60,
      "y": 120,
    },
    {
      "height": 50,
      "width": 50,
      "x": 120,
      "y": 0,
    },
    {
      "height": 50,
      "width": 50,
      "x": 120,
      "y": 60,
    },
    {
      "height": 50,
      "width": 50,
      "x": 120,
      "y": 120,
    },
    {
      "height": 50,
      "width": 50,
      "x": 180,
      "y": 0,
    },
  ],
  "height": 200,
  "width": 230,
  "x": 0,
  "y": 0,
}
`;

exports[`gap all reverse wrapped 1`] = `
{
  "children": [
    {
      "height": 50,
      "width": 50,
      "x": 180,
      "y": 0,
    },
    {
      "height": 50,
      "width": 50,
      "x": 180,
      "y": 60,
    },
    {
      "height": 50,
      "width": 50,
      "x": 180,
      "y": 120,
    },
    {
      "height": 50,
      "width": 50,
      "x": 120,
      "y": 0,
    },
    {
      "height": 50,
      "width": 50,
      "x": 120,
      "y": 60,
    },
    {
      "height": 50,
      "width": 50,
      "x": 120,
      "y": 120,
    },
    {
      "height": 50,
      "width": 50,
      "x": 60,
      "y": 0,
    },
    {
      "height": 50,
      "width": 50,
      "x": 60,
      "y": 60,
    },
    {
      "height": 50,
      "width": 50,
      "x": 60,
      "y": 120,
    },
    {
      "height": 50,
      "width": 50,
      "x": 0,
      "y": 0,
    },
  ],
  "height": 200,
  "width": 230,
  "x": 0,
  "y": 0,
}
`;

exports[`gap horizontal 1`] = `
{
  "children": [
    {
      "height": 50,
      "width": 50,
      "x": 0,
      "y": 0,
    },
    {
      "height": 50,
      "width": 50,
      "x": 0,
      "y": 50,
    },
    {
      "height": 50,
      "width": 50,
      "x": 0,
      "y": 100,
    },
    {
      "height": 50,
      "width": 50,
      "x": 0,
      "y": 150,
    },
    {
      "height": 50,
      "width": 50,
      "x": 60,
      "y": 0,
    },
    {
      "height": 50,
      "width": 50,
      "x": 60,
      "y": 50,
    },
    {
      "height": 50,
      "width": 50,
      "x": 60,
      "y": 100,
    },
    {
      "height": 50,
      "width": 50,
      "x": 60,
      "y": 150,
    },
    {
      "height": 50,
      "width": 50,
      "x": 120,
      "y": 0,
    },
    {
      "height": 50,
      "width": 50,
      "x": 120,
      "y": 50,
    },
  ],
  "height": 200,
  "width": 170,
  "x": 0,
  "y": 0,
}
`;

exports[`gap vertical 1`] = `
{
  "children": [
    {
      "height": 50,
      "width": 50,
      "x": 0,
      "y": 0,
    },
    {
      "height": 50,
      "width": 50,
      "x": 0,
      "y": 60,
    },
    {
      "height": 50,
      "width": 50,
      "x": 0,
      "y": 120,
    },
    {
      "height": 50,
      "width": 50,
      "x": 50,
      "y": 0,
    },
    {
      "height": 50,
      "width": 50,
      "x": 50,
      "y": 60,
    },
    {
      "height": 50,
      "width": 50,
      "x": 50,
      "y": 120,
    },
    {
      "height": 50,
      "width": 50,
      "x": 100,
      "y": 0,
    },
    {
      "height": 50,
      "width": 50,
      "x": 100,
      "y": 60,
    },
    {
      "height": 50,
      "width": 50,
      "x": 100,
      "y": 120,
    },
    {
      "height": 50,
      "width": 50,
      "x": 150,
      "y": 0,
    },
  ],
  "height": 200,
  "width": 200,
  "x": 0,
  "y": 0,
}
`;
